<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main_constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">

    <AutoCompleteTextView
        android:id="@+id/inputCityName"
        android:layout_width="193dp"
        android:layout_height="46dp"
        android:hint="@string/editPlace_hint"
        app:layout_constraintStart_toStartOf="@+id/textViewUpdatedTime"
        app:layout_constraintTop_toBottomOf="@+id/textViewUpdatedTime" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="94dp"
        android:layout_height="48dp"
        android:layout_marginStart="2dp"
        android:onClick="onSearch"
        android:text="@string/searchbutton_label"
        app:layout_constraintBottom_toBottomOf="@+id/inputCityName"
        app:layout_constraintStart_toEndOf="@+id/inputCityName"
        app:layout_constraintTop_toTopOf="@+id/inputCityName" />

    <TextView
        android:id="@+id/textViewUpdatedTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/defaultUpdate_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewConnection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/Connection_textView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/textViewConnection"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputCityName" />

    <Button
        android:id="@+id/button_display"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="16dp"
        android:onClick="display"
        android:text="Display"
        android:textSize="8sp"
        app:layout_constraintBottom_toBottomOf="@+id/button_search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_search"
        app:layout_constraintTop_toTopOf="@+id/button_search" />

</androidx.constraintlayout.widget.ConstraintLayout>